--- a/chinese.html
+++ b/chinese.html
@@ -32,7 +32,8 @@
         <td width="50%">
             <font color="#0000cc" size="5"><b>王岗伟</b></font>   副教授
 
-          <p> 河北经贸大学数学与统计学院 </p>
+          <p> <a href="https://www.hueb.edu.cn/">河北经贸大学</a>
+  <a href="https://st.hueb.edu.cn/">数学与统计学院 </p>
 
           <p>天津市西青区宾水西道393号博理楼B316 </p>
 
