--- a/chinese.html
+++ b/chinese.html
@@ -33,14 +33,14 @@
             <font color="#0000cc" size="5"><b>王岗伟</b></font>   副教授
 
           <p> <a href="https://www.hueb.edu.cn/">河北经贸大学</a>
-  <a href="https://st.hueb.edu.cn/">数学与统计学院 </p>
+  <a href="https://st.hueb.edu.cn/">数学与统计学院</a> </p>
 
-          <p>天津市西青区宾水西道393号博理楼B316 </p>
+          <p>河北省石家庄市新华区学府路47号 </p>
 
-          <p><b> 英文主页: </b> <a href="https://zhangbiaomath.github.io/">  https://zhangbiaomath.github.io/ </a>   </p>
+          <p><b> 英文主页: </b> <a href="https://wanggangwei66.github.io/">  https://wanggangwei66.github.io/ </a>   </p>
 
             
-          <p><b>电子邮箱: </b>  <a href="mailto:zhang@tjnu.edu.cn"> zhang (at) tjnu.edu.cn  </a> </p>
+          <p><b>电子邮箱: </b>  <a href="mailto:gangwei@hueb.edu.cn"> gangwei(at) hueb.edu.cn  </a> </p>
 
         </td>
         <td width="30%"><img border="" alt="" src="content/pic.jpg" width="150" ></td>
@@ -54,10 +54,53 @@
         个人简介
     </h3>
     <p>
-        &nbsp; &nbsp; &nbsp; &nbsp; 研究方向为组合数学，主要从事单峰型理论和对称函数理论的研究工作。2015年6月博士毕业于南开大学。2018年8月至2019年8月赴美国宾夕法尼亚大学访问。在《Journal of Combinatorial Theory, Series A》、《Proceedings of the American Mathematical Society》、《Advances in Applied Mathematics》、《SIAM Journal on Discrete Mathematics》等期刊发表学术论文20余篇，先后主持国家自然科学基金数学天元基金项目、青年基金项目、面上项目。
+        &nbsp; &nbsp; &nbsp; &nbsp; 研究方向为非线性演化方程, 对称，守恒律，<a href="http://www.scholarpedia.org/article/Soliton">孤立子，
+  <a href="http://www.scholarpedia.org/article/Nonlinear_waves">非线性波 </a>等。。
+                2015年6月博士毕业于南开大学。2018年8月至2019年8月赴美国宾夕法尼亚大学访问。
+                在《Journal of Combinatorial Theory, Series A》、
+                《Proceedings of the American Mathematical Society》、《Advances in Applied Mathematics》、《SIAM Journal on Discrete Mathematics》等期刊发表学术论文20余篇，
+                先后主持国家自然科学基金数学天元基金项目、青年基金项目、面上项目。
 
 
-
+<h2>教育经历</h2>
+<table class="imgtable"><tr><td>
+<td align="left"><h3>博士 <a href="https://www.bit.edu.cn/">北京理工大学</a> (2013.09 ~ 2017.06),</h3>
+<ul>
+<li><p><b>院系专业</b>:  <a href="https://math.bit.edu.cn/">数学与统计学院,</a>  应用数学</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<td align="left"><h3>硕士 <a href="https://www.lcu.edu.cn/">聊城大学</a> (2010.9 ~ 2013.7)，
+  </h3>
+<ul>
+<li><p><b>院系专业</b>: <a href="https://math.lcu.edu.cn/">数学科学学院,</a>  系统理论</p>
+</li>
+</ul>
+</td></tr></table>
+  <table class="imgtable"><tr><td>
+<td align="left"><h3>联合培养博士 <a href="https://www.ubc.ca/">加拿大英属哥伦比亚大学</a> (2014.09 ~ 2015.09), 
+  <a href="https://personal.math.ubc.ca/~bluman/">导师：George Bluman</a> 
+  </h3>
+<ul>
+<li><p><b>院系专业</b>:  <a href="https://www.math.ubc.ca/">数学系,</a>  应用数学</p>
+</ul>
+</td></tr></table>
+   <table class="imgtable"><tr><td>
+<td align="left"><h3>联合培养博士 <a href="https://www.utrgv.edu/en-us/index.htm">美国德克萨斯大学</a> (2015.12 ~ 2016.12)，
+  </h3>
+<ul>
+<li><p><b>院系专业</b>:  <a href="https://www.utrgv.edu/math/">数学与统计学院,</a>  应用数学</p>
+</ul>
+</td></tr></table>
+ 
+<h2>工作经历</h2>
+<table class="imgtable"><tr><td>
+<td align="left"><h3>副教授，<a href="https://st.hueb.edu.cn/">数学与统计学院</a>， <a href="https://www.hueb.edu.cn/">河北经贸大学</a> (2021.11 ~ 至今)</h3>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<td align="left"><h3>讲师，<a href="https://st.hueb.edu.cn/">数学与统计学院</a>， <a href="https://www.hueb.edu.cn/">河北经贸大学</a> (2017.07 ~ 2021.10)</h3>
+</td></tr></table> 
 
 
 
