--- a/chinese.html
+++ b/chinese.html
@@ -54,15 +54,15 @@
         个人简介
     </h3>
     <p>
-        &nbsp; &nbsp; &nbsp; &nbsp; 研究方向为非线性演化方程, 对称，守恒律，<a href="http://www.scholarpedia.org/article/Soliton">孤立子，
-  <a href="http://www.scholarpedia.org/article/Nonlinear_waves">非线性波 </a>等。。
-                2015年6月博士毕业于南开大学。2018年8月至2019年8月赴美国宾夕法尼亚大学访问。
-                在《Journal of Combinatorial Theory, Series A》、
-                《Proceedings of the American Mathematical Society》、《Advances in Applied Mathematics》、《SIAM Journal on Discrete Mathematics》等期刊发表学术论文20余篇，
-                先后主持国家自然科学基金数学天元基金项目、青年基金项目、面上项目。
+        &nbsp; &nbsp; &nbsp; &nbsp; 研究方向为非线性演化方程, 对称，守恒律，<a href="http://www.scholarpedia.org/article/Soliton">孤立子</a>，
+  <a href="http://www.scholarpedia.org/article/Nonlinear_waves">非线性波 </a>等。
+统计与数学学院副教授，硕士生导师，河北省拔尖人才（专技）优秀青年人才，河北经贸大学拔尖团队带头人，河北经贸大学微分方程及其应用研究中心负责人，河北经贸大学科研标兵，河北经贸大学青年五四奖章获得者，河北省三三三层次人才第三层次，
+            石家庄市青年拔尖人才，河北省新时代冀青之星，美国数学会评论员。排名第一位获得河北省科学技术奖励自然科学奖三等奖、河北省数学会青年学术奖二、三等奖等。主持主研国家自然科学基金、
+            河北省自然科学基金面上项目、青年基金项目、河北省三三三人才工程项目、河北经贸大学重点项目等多项课题。
+            近五年，以第一作者和通讯作者发表高水平学术论文20余篇，多篇论文入选高被引论文，引用总次数1500余次。2023年入选Elsevier发布的全球前2%TOP科学家榜单年度榜单。
 
 
-<h2>教育经历</h2>
+<h3>教育经历</h3>
 <table class="imgtable"><tr><td>
 <td align="left"><h3>博士 <a href="https://www.bit.edu.cn/">北京理工大学</a> (2013.09 ~ 2017.06),</h3>
 <ul>
