--- a/chinese.html
+++ b/chinese.html
@@ -94,7 +94,7 @@
 </ul>
 </td></tr></table>
  
-<h2>工作经历</h2>
+<h3>工作经历</h3>
 <table class="imgtable"><tr><td>
 <td align="left"><h3>副教授，<a href="https://st.hueb.edu.cn/">数学与统计学院</a>， <a href="https://www.hueb.edu.cn/">河北经贸大学</a> (2021.11 ~ 至今)</h3>
 </td></tr></table>
@@ -141,15 +141,29 @@
 
             <tr>
                 <td align="left">
-                    &nbsp; 2020/12-至今
+                    &nbsp; 2021/12-至今
                 </td>
                 <td align="left">
-                    &nbsp;  天津师范大学数学科学学院
+                    &nbsp;  <a href="https://www.hueb.edu.cn/">河北经贸大学</a>
+  <a href="https://st.hueb.edu.cn/">数学与统计学院</a>
                 </td>
                 <td align="left">
                     &nbsp; 副教授
                 </td>
             </tr>
+<tr>
+                <td align="left">
+                    &nbsp; 2013/09-2017/06
+                         </td>
+                <td align="left">
+                    &nbsp;   <a href="https://www.bit.edu.cn/">北京理工大学</a> <a href="https://math.bit.edu.cn/">数学与统计学院,</a>
+                </td>
+                <td align="left">
+                    &nbsp; 博士
+                </td>
+            </tr>
+
+                
             <tr>
                 <td align="left">
                     &nbsp; 2018/8-2019/8
