--- a/chinese.html
+++ b/chinese.html
@@ -62,50 +62,12 @@
             近五年，以第一作者和通讯作者发表高水平学术论文20余篇，多篇论文入选高被引论文，引用总次数1500余次。2023年入选Elsevier发布的全球前2%TOP科学家榜单年度榜单。
 </p>
 
-<h3>教育经历</h3>
-<table class="imgtable"><tr><td>
-<td align="left"><h3>博士 <a href="https://www.bit.edu.cn/">北京理工大学</a> (2013.09 ~ 2017.06),</h3>
-<ul>
-<li><p><b>院系专业</b>:  <a href="https://math.bit.edu.cn/">数学与统计学院,</a>  应用数学</p>
-</li>
-</ul>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<td align="left"><h3>硕士 <a href="https://www.lcu.edu.cn/">聊城大学</a> (2010.9 ~ 2013.7)，
-  </h3>
-<ul>
-<li><p><b>院系专业</b>: <a href="https://math.lcu.edu.cn/">数学科学学院,</a>  系统理论</p>
-</li>
-</ul>
-</td></tr></table>
-  <table class="imgtable"><tr><td>
-<td align="left"><h3>联合培养博士 <a href="https://www.ubc.ca/">加拿大英属哥伦比亚大学</a> (2014.09 ~ 2015.09), 
-  <a href="https://personal.math.ubc.ca/~bluman/">导师：George Bluman</a> 
-  </h3>
-<ul>
-<li><p><b>院系专业</b>:  <a href="https://www.math.ubc.ca/">数学系,</a>  应用数学</p>
-</ul>
-</td></tr></table>
-   <table class="imgtable"><tr><td>
-<td align="left"><h3>联合培养博士 <a href="https://www.utrgv.edu/en-us/index.htm">美国德克萨斯大学</a> (2015.12 ~ 2016.12)，
-  </h3>
-<ul>
-<li><p><b>院系专业</b>:  <a href="https://www.utrgv.edu/math/">数学与统计学院,</a>  应用数学</p>
-</ul>
-</td></tr></table>
- 
-<h3>工作经历</h3>
-<table class="imgtable"><tr><td>
-<td align="left"><h3>副教授，<a href="https://st.hueb.edu.cn/">数学与统计学院</a>， <a href="https://www.hueb.edu.cn/">河北经贸大学</a> (2021.11 ~ 至今)</h3>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<td align="left"><h3>讲师，<a href="https://st.hueb.edu.cn/">数学与统计学院</a>， <a href="https://www.hueb.edu.cn/">河北经贸大学</a> (2017.07 ~ 2021.10)</h3>
-</td></tr></table> 
 
 
 
 
-    </p>
+
+   
 </div>
 <div>
     <table>
@@ -231,7 +193,7 @@
                     &nbsp;    <a href="https://www.utrgv.edu/en-us/index.htm">美国德克萨斯大学</a> <a href="https://www.utrgv.edu/math/">数学与统计学院</a>
                 </td>
                 <td align="left">
-                    &nbsp; 联合培养博士 <a href="https://personal.math.ubc.ca/~bluman/">导师：George Bluman</a> 
+                    &nbsp; 联合培养博士
                 </td>
             </tr>
 
