--- a/chinese.html
+++ b/chinese.html
@@ -292,7 +292,8 @@
         </p>
 
     <h4>
-        <a href="https://github.com/zhangbiaomath/zhangbiaomath.github.io/blob/master/content/students.md"> 指导学生情况(硕士研究生)</a>
+       <a href="pdf/gangwei.pdf">[我的简历]</a> <a href="https://www.scopus.com/authid/detail.uri?authorId=56459163700">[Scopus]</a> 
+  <a href="https://github.com/wanggangwei66">[GitHub]<a href="EnHome.html">[English Page]</a></p>
       
     </h4>
 
