--- a/chinese.html
+++ b/chinese.html
@@ -264,27 +264,33 @@
         </p>
     </ol>
 
-    <h4>
+     <h4>
        代表性成果
     </h4>
     <ol class="paper list-paddingleft-2">
         <p>
-            Arthur L.B. Yang, Philip B. Zhang, Descent generating polynomials and the Hermite-Biehler theorem, Journal of Algebraic Combinatorics, 56 (2022), 117-152.
+    Gangwei Wang, Xiqiang Liu *, Yingyuan Zhang， Lie symmetry analysis to the time fractional generalized fifth-order KdV equation， 
+    Communications in Nonlinear Science and Numerical Simulation (CNSNS), 18 (2013) 2321-2326.
         </p>
 
         <p>
-            Zhicong Lin, Jun Ma, Philip B. Zhang, Statistics on multipermutations and partial gamma-positivity, Journal of Combinatorial Theory, Series A, 183 (2021), 105488.
+        Gangwei Wang *, Tian-Zhou Xu, Stephen Johnson, Anjan Biswas，   Solitons and Lie group analysis to an extended quantum Zakharov–Kuznetsov equation，
+Astrophysics and Space Science (ASS), 349 (2014) 317–327.
         </p>
 
         <p>
-            James Haglund, Philip B. Zhang, Real-rootedness of variations of Eulerian polynomials, Advances in Applied Mathematics, 109 (2019), 38-54.
+       Gangwei Wang *, K.Fakhar，    Lie symmetry analysis, nonlinear self-adjointness and conservation laws to an extended (2+1)-dimensional 
+                Zakharov–Kuznetsov–Burgers equation，
+Computers & Fluids (CAF), 119 (2015) 143-148.
         </p>
         <p>
-            Matthew H.Y. Xie, Philip B. Zhang, Equivariant Kazhdan-Lusztig polynomials of thagomizer matroids, Proceedings of the American Mathematical Society, 147 (2019), 4687-4695.
+  Gangwei Wang * , A. H. Kara，  Nonlocal symmetry analysis, explicit solutions and conservation laws for the fourth-order Burgers’ equation，
+Chaos, Solitons & Fractals (CSF), 81 (2015) 290-298.        
         </p>
 
         <p>
-            Arthur L.B. Yang, Philip B. Zhang, Brenti's open problem on the real-rootedness of q-Eulerian polynomials of type D, SIAM Journal on Discrete Mathematics, 31 (2) (2017), 918-926.
+        Gangwei Wang *，   Symmetry analysis and rogue wave solutions for the (2 + 1)-dimensional nonlinear Schrodinger equation with variable coefficients，
+Applied Mathematics Letters (AML), 56 (2016) 56–64.
         </p>
     </ol>
         <p>
