--- a/chinese.html
+++ b/chinese.html
@@ -238,9 +238,9 @@
     </h4>
     <ol class="project list-paddingleft-2">
         <p>
-            本科课程：高等代数、组合数学
+            本科课程：常微分方程、偏微分方程
         <p>
-            研究生课程：计数组合学、代数组合学、论文写作指导
+          。。。。。。
         </p>
     </ol>
     
@@ -251,16 +251,16 @@
     </h4>
     <ol class="project list-paddingleft-2">
         <p>
-            2022.1-2025.12，代数组合学中的若干Schur正性问题，国家自然科学基金面上项目 (No. 12171362)，50万，主持
+            2023.1-2025.12，河北省自然科学基金面上项目 ，主持
         </p>
         <p>
-            2019.1-2021.12，钩长公式及其相关组合问题研究，国家自然科学基金青年项目 (No.11801447)，25万，参与
+           2018.01-2020.12，河北省自然科学基金青年项目 ，主持
         </p>
         <p>
-            2018.1-2020.12，组合数学中的实根多项式， 国家自然科学基金青年科学基金项目 (No. 11701424)，25万，主持 
+            2022.08-2024.07，河北省三三三人才工程资助项目，主持 
         </p>
         <p>
-            2017.1-2017.12，广义欧拉多项式的实根性，国家自然科学基金数学天元基金 (No. 11626172)，3万， 主持
+           。。。。。。
         </p>
     </ol>
 
