--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ Shijiazhuang, Hebei, 050061, P.R. China <br />
   <li><p> Nonlinear Waves</p></li>
    <li><p> Symmetry and conservation laws</p></li>
   <li><p>  Solitons </p></li>
+ <li><p>  Integrable Systems </p></li>
 </ul>
 
  <h4>
