--- a/chinese.html
+++ b/chinese.html
@@ -296,12 +296,12 @@ Applied Mathematics Letters (AML), 56 (2016) 56–64.
         </p>
     </ol>
         <p>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    更多文章，请点击  <a href="./research.html">https://zhangbiaomath.github.io/research.html</a>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    更多文章，请点击  <a href="./research.html">https://wanggangwei66.github.io/research.html</a>
         </p>
 
     <h4>
        <a href="pdf/gangwei.pdf">[我的简历]</a> <a href="https://www.scopus.com/authid/detail.uri?authorId=56459163700">[Scopus]</a> 
-  <a href="https://github.com/wanggangwei66">[GitHub]<a href="EnHome.html">[English Page]</a></p>
+  <a href="https://github.com/wanggangwei66">[GitHub]<a href="index.html">[English Page]</a></p>
       
     </h4>
 
