--- a/research.html
+++ b/research.html
@@ -36,11 +36,36 @@
 
     <ol reversed>
 
+<!--
+            <tr>
+                <td align="left">
+                    &nbsp; 2010/9-2015/6
+                </td>
+                <td align="left">
+                    &nbsp; 南开大学组合数学中心
+                </td>
+                <td align="left">
+                    &nbsp;  理学博士
+                </td>
+            </tr>
 
-      You may look up my papers on <a
+            <tr>
+                <td align="left">
+                    &nbsp; 2006/9-2010/7
+                </td>
+                <td align="left">
+                    &nbsp;  邯郸学院数学系
+                </td>
+                <td align="left">
+                    &nbsp;  You may look up my papers on <a
         href="https://arxiv.org/find/grp_math/1/au:+Zhang_Philip_B/0/1/0/all/0/1">arXiv</a>, <a
         href="https://scholar.google.com/citations?user=E0RFmmMAAAAJ&hl=en">Google Scholar</a>, and <a
         href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=1066440">MathSciNet</a>.
+                </td>
+            </tr>
+
+-->
+     
 
 
       <li class="paper-tight">
