--- a/research.html
+++ b/research.html
@@ -70,12 +70,17 @@
 
       <li class="paper-tight">
         <p>
-          (with Yujie Du)<br>
-          <span class="papertitle">On enumeration of pattern-avoiding Fishburn permutations</span><br>
-          <span class="journalname">Discrete Mathematics</span>, 247 (2024), 113952.<br>
-          <a href="https://arxiv.org/abs/2302.13767">[arXiv]</a> &nbsp
-          <a href="papers/2024-dm-Fishburn.pdf">[pdf]</a> &nbsp
-          <a href="https://doi.org/10.1016/j.disc.2024.113952">[journal]</a>
+         2023
+    <ul>
+<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0030402623001249">
+ Explicit soliton solutions of (3+1)-dimensional nonlinear Schrödinger equation with time variable coefficients,
+  </a> <br />
+<b>Gangwei Wang, </b>  Xin Wang, Tongnan Huang*,  <br />
+<i>
+Optik
+<b>(Optik)</b>,   275 (2023) 170628.   [SCI]</a></i></p>
+</li>
+</ul> 
         </p>
       </li>
 
