--- a/research.html
+++ b/research.html
@@ -87,28 +87,114 @@ Optik
 
       <li class="paper-tight">
         <p>
-          (with Sergey Kitaev)<br>
-          <span class="papertitle">Non-overlapping descents and ascents in stack-sortable permutations</span><br>
-          <span class="journalname">Discrete Applied Mathematics</span>, 344 (2024), 112-119.<br>
-          <a href="https://arxiv.org/abs/2310.17236">[arXiv]</a> &nbsp
-          <a href="papers/2024-dam-MND-MNA-stack.pdf">[pdf]</a> &nbsp
-          <a href="https://doi.org/10.1016/j.dam.2023.11.020">[journal]</a>
+          <ul>
+<li><p><a href="https://www.worldscientific.com/worldscinet/fractals">
+ Explicit optical dromions with Kerr Law having fractional temporal evolution,
+  </a> <br />
+<b>Gangwei Wang *, </b>  Qin Zhou, Ali Saleh Alshomrani, Anjan Biswas  <br />
+<i>
+Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<b>(Fractals)</b>,  submitted.   [SCI]</a></i></p>
+</li>
+</ul> 
         </p>
       </li>
 
 
-
+2022
 
       <li class="paper-tight">
         <p>
-          (with Siyi Wu)<br>
-          <span class="papertitle">The log-concavity of Kazhdan-Lusztig polynomials of thagomizer matroids</span><br>
-          <span class="journalname">Discrete Mathematics</span>, 346 (2023), 113381.<br>
-          <a href="papers/2023-dm-tn.pdf">[pdf]</a> &nbsp
-          <a href="https://doi.org/10.1016/j.disc.2023.113381">[journal]</a>
+         <ul>
+<li><p><a href="https://www.mdpi.com/2504-3110/6/9/468">
+ Symmetry Analysis and PT-Symmetric Extension of the
+Fifth-Order Korteweg–de Vries-Like Equation
+  </a> <br />
+<b>Gangwei Wang * </b>, Bo Shen, Mengyue He, Fei Guan, Lihua Zhang<br />
+<i>
+Fractal and Fractional
+<b>(FF)</b>,   6(9) (2022) 468.   [SCI]</a></i></p>
+</li>
+</ul>   
         </p>
       </li>
 
+   <li class="paper-tight">
+        <p>
+ <ul>
+<li><p><a href="https://iopscience.iop.org/article/10.1088/1572-9494/ac76b6">
+ Consistent Burgers equation expansion method and its applications to high dimensional Burgers-type equations
+  </a> <br />
+<b>Gangwei Wang * </b>, Li Li, A.H. Kara <br />
+<i>
+Communications in Theoretical Physics
+<b>(CTP)</b>,  74 (2022) 085004.   [SCI]</a></i></p>
+</li>
+</ul> 
+   </p>
+      </li>
+
+        <li class="paper-tight">
+        <p>
+  <ul>
+<li><p><a href="https://www.worldscientific.com/doi/10.1142/S0218348X22500815">
+ A new (3+1)-dimensional KdV equation and mKdV equation with their corresponding fractional forms
+  </a> <br />
+<b>Gangwei Wang *, </b> Abdul-Majid Wazwaz  <br />
+<i>
+Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<b>(Fractals)</b>,  30  (2022) 2250081.   [SCI]</a></i></p>
+</li>
+</ul>   
+    </p>
+      </li>
+ 
+
+             <li class="paper-tight">
+        <p>
+  <ul>
+<li><p><a href="https://www.mdpi.com/2504-3110/6/3/166">
+ New explicit solutions of the extended double (2+1)-Dimensional sine-Gorden equation and its time fractional form
+  </a> <br />
+<b> Gangwei Wang *, et. al., </b>  <br />
+<i>
+Fractal and Fractional
+<b>(FF)</b>,  6  (2022) 166.  [SCI]</a></i></p>
+</li>
+</ul> 
+   </p>
+      </li>
+
+                  <li class="paper-tight">
+        <p>
+ <ul>
+<li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0960077921010481">
+ On the modified Gardner type equation and its time fractional form
+  </a> <br />
+<b>Gangwei Wang *, </b> Abdul-Majid Wazwaz <br />
+<i>
+Chaos, Solitons & Fractals
+<b>(CSF)</b>,  155 (2022) 111694.  [SCI]</a></i></p>
+</li>
+</ul> 
+   </p>
+      </li>
+
+                       <li class="paper-tight">
+        <p>
+ <ul>
+<li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0375960121006320">
+ Highly dispersive optical solitons in polarization–preserving fibers with Kerr law nonlinearity by Lie symmetry
+  </a> <br />
+<b>Gangwei Wang, </b> A. H.Kara *, Anjan Biswas, Padmaja Guggilla, Abdullah Khamis, Alzahrani, Milivoj R.Belic<br />
+<i>
+Physics Letters A
+<b>(PLA)</b>,  421 (2022) 127768.  [SCI]</a></i></p>
+</li>
+</ul> 
+     </p>
+      </li>
+    
 
       <li class="paper-tight">
         <p>
