--- a/research.html
+++ b/research.html
@@ -188,7 +188,7 @@ Chaos, Solitons & Fractals
   </a> <br />
 <b>Gangwei Wang, </b> A. H.Kara *, Anjan Biswas, Padmaja Guggilla, Abdullah Khamis, Alzahrani, Milivoj R.Belic<br />
 <i>
-Physics Letters A
+ <span class="journalname"> Physics Letters A </span>
 <b>(PLA)</b>,  421 (2022) 127768.  [SCI]</a></i></p>
 </li>
 </ul> 
