--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
   </a> <br />
 <b>Gangwei Wang, </b>  Xin Wang, Tongnan Huang*,  <br />
 <i>
-Optik
+<span class="journalname"> Optik </span>
 <b>(Optik)</b>,   275 (2023) 170628.   [SCI]</a></i></p>
 </li>
 </ul> 
@@ -93,7 +93,7 @@ Optik
   </a> <br />
 <b>Gangwei Wang *, </b>  Qin Zhou, Ali Saleh Alshomrani, Anjan Biswas  <br />
 <i>
-Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<span class="journalname"> Fractals-Complex Geometry Patterns and Scaling in Nature and Society </span>
 <b>(Fractals)</b>,  submitted.   [SCI]</a></i></p>
 </li>
 </ul> 
@@ -112,7 +112,7 @@ Fifth-Order Korteweg–de Vries-Like Equation
   </a> <br />
 <b>Gangwei Wang * </b>, Bo Shen, Mengyue He, Fei Guan, Lihua Zhang<br />
 <i>
-Fractal and Fractional
+<span class="journalname"> Fractal and Fractional </span>
 <b>(FF)</b>,   6(9) (2022) 468.   [SCI]</a></i></p>
 </li>
 </ul>   
@@ -127,7 +127,7 @@ Fractal and Fractional
   </a> <br />
 <b>Gangwei Wang * </b>, Li Li, A.H. Kara <br />
 <i>
-Communications in Theoretical Physics
+<span class="journalname"> Communications in Theoretical Physics </span>
 <b>(CTP)</b>,  74 (2022) 085004.   [SCI]</a></i></p>
 </li>
 </ul> 
@@ -142,7 +142,7 @@ Communications in Theoretical Physics
   </a> <br />
 <b>Gangwei Wang *, </b> Abdul-Majid Wazwaz  <br />
 <i>
-Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<span class="journalname"> Fractals-Complex Geometry Patterns and Scaling in Nature and Society  </span>
 <b>(Fractals)</b>,  30  (2022) 2250081.   [SCI]</a></i></p>
 </li>
 </ul>   
@@ -158,7 +158,7 @@ Fractals-Complex Geometry Patterns and Scaling in Nature and Society
   </a> <br />
 <b> Gangwei Wang *, et. al., </b>  <br />
 <i>
-Fractal and Fractional
+<span class="journalname"> Fractal and Fractional </span>
 <b>(FF)</b>,  6  (2022) 166.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -173,7 +173,7 @@ Fractal and Fractional
   </a> <br />
 <b>Gangwei Wang *, </b> Abdul-Majid Wazwaz <br />
 <i>
-Chaos, Solitons & Fractals
+<span class="journalname"> Chaos, Solitons & Fractals </span>
 <b>(CSF)</b>,  155 (2022) 111694.  [SCI]</a></i></p>
 </li>
 </ul> 
