--- a/research.html
+++ b/research.html
@@ -216,7 +216,7 @@ Fifth-Order Korteweg–de Vries-Like Equation
   </a> <br />
 <b>Gangwei Wang *, </b> Abdul-Majid Wazwaz <br />
 <i>
-Communications in Theoretical Physics
+<span class="journalname"> Communications in Theoretical Physics </span>
 <b>(CTP)</b>,  73 ( 2021 ) 045003.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -230,7 +230,7 @@ Communications in Theoretical Physics
   </a> <br />
 <b>Gangwei Wang * </b> <br />
 <i>
-Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<span class="journalname"> Fractals-Complex Geometry Patterns and Scaling in Nature and Society </span>
 <b>(Fractals)</b>,   29  (2021) 2150101.  [SCI]</a></i></p>
 </li>
 </ul>  
@@ -244,7 +244,7 @@ Fractals-Complex Geometry Patterns and Scaling in Nature and Society
   </a> <br />
 <b>Gangwei Wang *</b> <br />
 <i>
-Nonlinear Dynamics
+<span class="journalname"> Nonlinear Dynamics </span>
 <b>(NODY)</b>,  104 (2021)1595–1602.  [SCI]</a></i></p>
 </li>
 </ul>  
@@ -258,7 +258,7 @@ Nonlinear Dynamics
   </a> <br />
 <b>Gangwei Wang * </b> <br />
 <i>
-Applied Mathematics Letters
+<span class="journalname"> Applied Mathematics Letters </span>
 <b>(AML)</b>,  113 (2021) 106768.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -272,7 +272,7 @@ Applied Mathematics Letters
   </a> <br />
 <b>Gangwei Wang, </b> Abdul-Majid Wazwaz * <br />
 <i>
-International Journal of Numerical Methods for Heat & Fluid Flow
+<span class="journalname"> International Journal of Numerical Methods for Heat & Fluid Flow </span>
 <b>(IJNMHFF)</b>,  31 (2021) 541-547.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -287,7 +287,7 @@ International Journal of Numerical Methods for Heat & Fluid Flow
   </a> <br />
 <b>Gangwei Wang *, </b> Kaitong Yang, Haicheng Gu, FeiGuan, A.H.Kara<br />
 <i>
-Nuclear Physics B
+<span class="journalname"> Nuclear Physics B </span>
 <b>(NPB)</b>,  953 (2020) 114956.  [SCI]</a></i></p>
 </li>
 </ul>   
@@ -301,7 +301,7 @@ Nuclear Physics B
   </a> <br />
 <b>Gangwei Wang, </b> JoseVega-Guzman, Anjan Biswas, Abdullah Kamis Alzahrani, A.H.Kara *<br />
 <i>
-Physics Letters A
+<span class="journalname"> Physics Letters A </span>
 <b>(PLA)</b>,  384 (2020) 126255.  [SCI]</a></i></p>
 </li>
 </ul>
@@ -315,7 +315,7 @@ Physics Letters A
   </a> <br />
 <b>Gangwei Wang * </b>, Yixing Liu, Yanbin Wu, Xing Su <br />
 <i>
-Fractals-Complex Geometry Patterns and Scaling in Nature and Society
+<span class="journalname"> Fractals-Complex Geometry Patterns and Scaling in Nature and Society </span>
 <b>(Fractals)</b>,   28  (2020) 2050044.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -331,7 +331,7 @@ Fractals-Complex Geometry Patterns and Scaling in Nature and Society
   </a> <br />
 <b>Gangwei Wang  *</b>, A. H. Kara<br />
 <i>
-Physics Letters A
+<span class="journalname"> Physics Letters A </span>
 <b>(PLA)</b>,  383 (2019) 728-731.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -345,7 +345,7 @@ Physics Letters A
   </a> <br />
 <b>Gangwei Wang  *</b>, Yixing Liu, Shuxin Han, Hua Wang and Xing Su<br />
 <i>
-Symmetry
+<span class="journalname"> Symmetry </span>
 <b>(Symmetry)</b>,   2019, 11(12), 1473.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -360,7 +360,7 @@ Symmetry
   </a> <br />
 <b>Gangwei Wang  * </b>,  A. H. Kara <br />
 <i>
-Communications in Theoretical Physics
+<span class="journalname"> Communications in Theoretical Physics </span>
 <b>(CTP)</b>,  69 (2018) 5–8.  [SCI]</a></i></p>
 </li>
 </ul>  
@@ -374,7 +374,7 @@ Communications in Theoretical Physics
   </a> <br />
 <b>Gangwei Wang  * </b>,  et. al., <br />
 <i>
-Optik
+<span class="journalname"> Optik </span>
 <b>(Optik)</b>, 160 (2018) 396–401.  [SCI]</a></i></p>
 </li>
 </ul> 
@@ -387,7 +387,8 @@ Optik
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/mma.4376">An analysis of the fourth-order PDEs – ‘patterns’ and ‘di-block polymers’
   </a> <br />
 T. Phidane, A. H. Kara, <b>Gangwei Wang  *</b> <br />
-<i>Mathematical Methods in the Applied Sciences  <b>(MMAS)</b>,  40 (2017) 5141-5146. [SCI]</a></i></p>
+<i>
+  <span class="journalname">  Mathematical Methods in the Applied Sciences  </span> <b>(MMAS)</b>,  40 (2017) 5141-5146. [SCI]</a></i></p>
 </li>
 </ul>   
                </p>
@@ -397,7 +398,8 @@ T. Phidane, A. H. Kara, <b>Gangwei Wang  *</b> <br />
   Group analysis, nonlinear self-adjointness, conservation laws, and soliton solutions for the mKdV systems
   </a> <br />
 <b>Gangwei Wang *</b>,  A. H. Kara, Jose Vega-Guzman, Anjan Biswas<br />
-<i>Nonlinear Analysis: Modelling and Control  <b>(NAMC)</b>,  22 (2017) 334–346. [SCI]</a></i></p>
+<i>
+  <span class="journalname">  Nonlinear Analysis: Modelling and Control </span>  <b>(NAMC)</b>,  22 (2017) 334–346. [SCI]</a></i></p>
 </li>
 </ul> 
 </p>
@@ -410,7 +412,8 @@ T. Phidane, A. H. Kara, <b>Gangwei Wang  *</b> <br />
 <li><p><a href="https://link.springer.com/article/10.1007/s11071-015-2480-8">
   Nonlocal symmetry analysis and conservation laws to an third-order Burgers equation</a> <br />
 <b>Gangwei Wang  *</b>, A. H. Kara & K. Fakhar <br />
-<i>Nonlinear Dynamics <b>(NODY)</b>,     83 (2016) 2281–2292. [SCI]</i></p>
+<i>
+  <span class="journalname">  Nonlinear Dynamics </span> <b>(NODY)</b>,     83 (2016) 2281–2292. [SCI]</i></p>
 </li>
 </ul>   
 </p>
@@ -422,7 +425,8 @@ T. Phidane, A. H. Kara, <b>Gangwei Wang  *</b> <br />
 (2 + 1)-dimensional nonlinear Schrodinger equation with variable
 coefficients</a> <br />
 <b>Gangwei Wang * </b> <br />
-<i>Applied Mathematics Letters <b>(AML)</b>,  56 (2016) 56–64. [SCI]<a href="pdf/AML.pdf">[PDF]</a></i></p>
+<i>
+  <span class="journalname"> Applied Mathematics Letters </span> <b>(AML)</b>,  56 (2016) 56–64. [SCI]<a href="pdf/AML.pdf">[PDF]</a></i></p>
 </li>
 </ul> 
 </p>
@@ -433,7 +437,8 @@ coefficients</a> <br />
 <li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0960077916300443">
   Group analysis, exact solutions and conservation laws of a generalized fifth order KdV equation </a> <br />
 <b>Gangwei Wang *</b>, A. H. Kara & K. Fakhar <br />
-<i>Chaos, Solitons & Fractals <b>(CSF)</b>,     86 (2016) 8-15. [SCI]</i></p>
+<i>
+  <span class="journalname"> Chaos, Solitons & Fractals </span> <b>(CSF)</b>,     86 (2016) 8-15. [SCI]</i></p>
 </li>
 </ul> 
   </p>
@@ -447,7 +452,8 @@ coefficients</a> <br />
 Nonlocal symmetry analysis, explicit solutions and conservation laws for the fourth-order Burgers’ equation
   </a> <br />
 <b>Gangwei Wang * </b>, A. H. Kara <br />
-<i>Chaos, Solitons & Fractals <b>(CSF)</b>, 81 (2015)  290-298. [SCI]</i></p>
+<i>
+  <span class="journalname"> Chaos, Solitons & Fractals </span> <b>(CSF)</b>, 81 (2015)  290-298. [SCI]</i></p>
 </li>
 </ul>   
 </p>
@@ -459,7 +465,8 @@ Nonlocal symmetry analysis, explicit solutions and conservation laws for the fou
   Symmetry analysis and conservation laws for the class of time-fractional nonlinear dispersive equation
   </a> <br />
 <b>Gangwei Wang *</b>, A. H. Kara & K. Fakhar <br />
-<i>Nonlinear Dynamics <b>(NODY)</b>,     82 (2015)  281–287. [SCI]</i></p>
+<i>
+  <span class="journalname"> Nonlinear Dynamics </span> <b>(NODY)</b>,     82 (2015)  281–287. [SCI]</i></p>
 </li>
 </ul> 
 </p>
@@ -471,7 +478,8 @@ Nonlocal symmetry analysis, explicit solutions and conservation laws for the fou
   Lie symmetry analysis, nonlinear self-adjointness and conservation laws to an extended (2+1)-dimensional Zakharov–Kuznetsov–Burgers equation
   </a> <br />
 <b>Gangwei Wang *</b>, K.Fakhar <br />
-<i>Computers & Fluids <b>(CAF)</b>, 119 (2015) 143-148. [SCI]</i></p>
+<i>
+  <span class="journalname"> Computers & Fluids </span> <b>(CAF)</b>, 119 (2015) 143-148. [SCI]</i></p>
 </li>
 </ul>   
 </p>
@@ -483,7 +491,8 @@ Nonlocal symmetry analysis, explicit solutions and conservation laws for the fou
  Conservation laws, multipliers, adjoint equations and Lagrangians for Jaulent–Miodek and some families of systems of KdV type equations
   </a> <br />
 <b>Gangwei Wang</b>, A. H. Kara * <br />
-<i>Nonlinear Dynamics<b>(NODY)</b>,  81 (2015) 753–763. [SCI]</i></p>
+<i>
+  <span class="journalname"> Nonlinear Dynamics </span><b>(NODY)</b>,  81 (2015) 753–763. [SCI]</i></p>
 </li>
 </ul> 
 </p>
@@ -495,7 +504,8 @@ Nonlocal symmetry analysis, explicit solutions and conservation laws for the fou
  Optical soliton of time fractional Schrödinger equations with He's semi-inverse method
   </a> <br />
 <b>Gangwei Wang *</b>, Tianzhou Xu <br />
-<i>Laser Physics<b>(LP)</b>,  25 (2015)  055402. [SCI]</i></p>
+<i>
+  <span class="journalname"> Laser Physics  </span><b>(LP)</b>,  25 (2015)  055402. [SCI]</i></p>
 </li>
 </ul> 
  </p>
@@ -508,7 +518,8 @@ Nonlocal symmetry analysis, explicit solutions and conservation laws for the fou
   Solitons and Lie group analysis to an extended quantum
 Zakharov–Kuznetsov equation</a> <br />
 <b>Gangwei Wang *</b>, Tian-Zhou Xu, Stephen Johnson, Anjan Biswas <br />
-<i>Astrophysics and Space Science <b>(ASS)</b>,  349 (2014) 317–327. [SCI]</i></p>
+<i>
+  <span class="journalname"> Astrophysics and Space Science </span> <b>(ASS)</b>,  349 (2014) 317–327. [SCI]</i></p>
 </li>
 </ul>   
 </p>
@@ -519,7 +530,8 @@ Zakharov–Kuznetsov equation</a> <br />
 <li><p><a href="https://link.springer.com/article/10.1007/s11071-013-1189-9">
   Singular solitons, shock waves, and other solutions to potential KdV equation</a> <br />
 <b>Gangwei Wang</b>,  Tian-Zhou Xu, Ghodrat Ebadi, Stephen Johnson, Andre J. Strong & Anjan Biswas * <br />
-<i>Nonlinear Dynamics<b>(NODY)</b>,  349 (2014) 317–327.  [SCI]</i></p>
+<i>
+  <span class="journalname"> Nonlinear Dynamics  </span><b>(NODY)</b>,  349 (2014) 317–327.  [SCI]</i></p>
 </li>
 </ul> 
 </p>
@@ -530,7 +542,8 @@ Zakharov–Kuznetsov equation</a> <br />
 <li><p><a href="http://przyrbwn.icm.edu.pl/APP/SPIS/a126-6.html">
  Shock waves and other solutions to the Benjamin-Bona-Mahoney-Burgers equation with dual power-law nonlinearity</a> <br />
 <b>Gangwei Wang</b>,  Tian-Zhou Xu, R. Abazari, Z. Jovanoski & Anjan Biswas * <br />
-<i>Acta Physica Polonica A <b>(APPA)</b>,  126 (2014)  1221–1225.   [SCI]</i></p>
+<i>
+  <span class="journalname"> Acta Physica Polonica A  </span> <b>(APPA)</b>,  126 (2014)  1221–1225.   [SCI]</i></p>
 </li>
 </ul> 
   </p>
@@ -543,7 +556,8 @@ Zakharov–Kuznetsov equation</a> <br />
 <ul>
 <li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1007570412005643">Lie symmetry analysis to the time fractional generalized fifth-order KdV equation</a> <br />
 <b>Gangwei Wang</b>, Xiqiang Liu *, Yingyuan Zhang <br />
-<i>Communications in Nonlinear Science and Numerical Simulation <b>(CNSNS)</b>,  18 (2013) 2321-2326. [SCI]</i></p>
+<i>
+  <span class="journalname"> Communications in Nonlinear Science and Numerical Simulation </span> <b>(CNSNS)</b>,  18 (2013) 2321-2326. [SCI]</i></p>
 </li>
 </ul>
 </p>
@@ -554,7 +568,8 @@ Zakharov–Kuznetsov equation</a> <br />
 <li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1007570412005539?via%3Dihub">Symmetry reduction, exact solutions and conservation laws of a
 new fifth-order nonlinear integrable equation</a> <br />
 <b>Gangwei Wang</b>, Xiqiang Liu *, Yingyuan Zhang <br />
-<i>Communications in Nonlinear Science and Numerical Simulation <b>(CNSNS)</b>, 18 (2013) 2313-2320. [SCI]</i></p>
+<i>
+  <span class="journalname"> Communications in Nonlinear Science and Numerical Simulation </span> <b>(CNSNS)</b>, 18 (2013) 2313-2320. [SCI]</i></p>
 </li>
 </ul>
 </p>
